jpo/templates/ingress.yaml
# ingressroute-flask-upload.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flask-upload-ingressroute
  namespace: default
spec:
  entryPoints:
    - web  # ou 'websecure' pour HTTPS si configuré dans Traefik
  routes:
    - match: Host(`debian.lan`)  # Assurez-vous que le DNS pointe vers le cluster
      kind: Rule
      services:
        - name: flask-upload-server
          port: 5000
